modify some features; no improvements

--- a/credit-crisis/solution2/makefile
+++ b/credit-crisis/solution2/makefile
@@ -1,5 +1,5 @@
 clean:
-	python3 extractFeatures.py
+	python3 extractFeatures.py --verbose=False
 	python3 rebalance.py
 	python3 scale.py
 	python3 pca.py
